# OpenCVBasic

./: .gitignore  CMakeLists.txt  main.cc
